plugins {
    id 'java'
    id 'maven'
    id 'maven-publish'
    id 'application'
}

repositories {
    mavenCentral()
    mavenLocal()
}

sourceCompatibility = 1.8

group = 'org.opencadc'

version = '1.2.3'

description = 'OpenCADC VOSpace client library'
def git_url = 'https://github.com/opencadc/vos'

mainClassName = 'ca.nrc.cadc.vos.client.Main'
  
dependencies {
    compile 'org.jdom:jdom2:[2.0.6,3.0)'
    compile 'xerces:xercesImpl:[2.12,3.0)'
    compile 'org.json:json:20160212'

    compile 'org.opencadc:cadc-util:[1.6,)'
    compile 'org.opencadc:cadc-uws:[1.0,)'
    compile 'org.opencadc:cadc-registry:[1.4,2.0)'

    testCompile 'junit:junit:[4.0,5.0)'
    testCompile 'org.easymock:easymock:[3.0,)'
    testCompile 'org.skyscreamer:jsonassert:[1.0,)'
}

configurations {
  runtime.exclude group: 'org.springframework'
}
